# simple-process-tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Assets/Icons/macos_icon/: app-icon.icns
Assets/Icons/windows_icon/: windows-app-icon.rc
Assets/InternalText/: AboutQt.md  Help.md
Assets/about-text/: about.html  qt.html
Screenshots/: README.md
custom/: platform_specifics.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  simple-process-tracker.pro
src/core/: about.cpp  about.h  about.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  parser.h  processdialog.cpp  processdialog.h  processdialog.ui  processscanner.cpp  processscanner.h
src/platform/: platform.h
src/subclass/: iconDelegate.h  myitemdelegate.h  mysortfilterproxymodel.h  mystandarditem.h  mystandarditemmodel.h
ui/about/: about.cpp  about.h  about.ui
ui/components/: trackentry.cpp  trackentry.h  trackentry.ui
ui/options/: options.cpp  options.h  options.ui
ui/processDialog/: processdialog.cpp  processdialog.h  processdialog.ui
ui/trackentry/: trackentry.cpp  trackentry.h  trackentry.ui
